--- a/Algoritmos - Rafael Collado - AG1.ipynb
+++ b/Algoritmos - Rafael Collado - AG1.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -98,7 +98,7 @@
        "8"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -142,7 +142,7 @@
        "[0, 1, 1, 0]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "id": "FqOPyCmv_K65"
    },
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -473,7 +473,7 @@
        "',0,2,5'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,12 +564,12 @@
     "### 1.1 Primer intento: Fuerza bruta\n",
     "\n",
     "- **Idea:** probar todas las parejas y quedarse con la mínima distancia.\n",
-    "- **Complejidad:** hay aproximadamente \\( \\frac{n(n-1)}{2} \\) parejas, por tanto **\\(O(n^2)\\)** en tiempo y **\\(O(1)\\)** en memoria."
+    "- **Complejidad:** hay aproximadamente **$\\frac{n(n-1)}{2}$** parejas, por tanto **\\(O(n^2)\\)** en tiempo y **\\(O(1)\\)** en memoria."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
        "(2, (9, 11))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,6 +596,7 @@
     "                best_pair = (xs[i], xs[j])\n",
     "    return best, best_pair\n",
     "\n",
+    "#Ejemplo\n",
     "xs = [5,1,9,11]\n",
     "closest_1d_bruteforce(xs)"
    ]
@@ -612,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +629,6 @@
     "    \"\"\"\n",
     "    Mejora para 1D: ordenar y comparar solo adyacentes.\n",
     "    Tiempo: O(n log n) por la ordenación + O(n) del barrido.\n",
-    "    Memoria extra: depende de la implementación de sorted (típicamente O(n)).\n",
     "    \"\"\"\n",
     "    if len(xs) < 2:\n",
     "        raise ValueError(\"Se necesitan al menos 2 números.\")\n",
@@ -638,16 +638,16 @@
     "    best_pair = None\n",
     "\n",
     "    for i in range(len(xs_sorted) - 1):\n",
-    "        d = xs_sorted[i + 1] - xs_sorted[i]  # ya ordenado => no hace falta abs\n",
+    "        d = xs_sorted[i + 1] - xs_sorted[i]  \n",
     "        if d < best:\n",
     "            best = d\n",
     "            best_pair = (xs_sorted[i], xs_sorted[i + 1])\n",
     "\n",
     "    return best, best_pair\n",
     "\n",
-    "# Ejemplo\n",
+    "#Ejemplo\n",
     "xs = [5, 1, 9, 11]\n",
-    "print(closest_1d_sorted(xs))  # (2, (9, 11))"
+    "print(closest_1d_sorted(xs))"
    ]
   },
   {
@@ -656,17 +656,16 @@
    "source": [
     "### 1.2 Segundo intento: Divide y Vencerás\n",
     "\n",
-    "Para que sea **Divide y Vencerás (DyV) “de libro”**, lo más limpio es usar **MergeSort** (que sigue DyV).  \n",
+    "Para que sea **Divide y Vencerás (DyV)**, se ha de usar **MergeSort**   \n",
     "Una vez obtenida la lista ordenada, hacemos un **barrido lineal** comparando solo **elementos adyacentes**.\n",
     "\n",
-    "Esto respeta la definición de DyV del material: **dividir** en subproblemas, **resolver** recursivamente y **combinar**.\n",
     "\n",
     "**Complejidad:**\n",
     "\n",
     "- **MergeSort:** cumple una recurrencia del tipo  \n",
-    "  \\[\n",
-    "  T(n)=2T\\left(\\frac{n}{2}\\right)+O(n)\\ \\Rightarrow\\ O(n\\log n)\n",
-    "  \\]\n",
+    "  $$\n",
+    "T(n)=2T\\left(\\frac{n}{2}\\right)+O(n)\\ \\Rightarrow\\ O(n\\log n)\n",
+    "$$\n",
     "- **Barrido final:** \\(O(n)\\) (no cambia el orden asintótico).\n",
     "\n",
     "Por tanto, el algoritmo completo es **\\(O(n\\log n)\\)**."
@@ -674,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -716,14 +715,14 @@
     "    best = float(\"inf\")\n",
     "    best_pair = None\n",
     "    for i in range(len(xs_sorted) - 1):\n",
-    "        d = xs_sorted[i + 1] - xs_sorted[i]  # ya están ordenados => no hace falta abs\n",
+    "        d = xs_sorted[i + 1] - xs_sorted[i]  \n",
     "        if d < best:\n",
     "            best = d\n",
     "            best_pair = (xs_sorted[i], xs_sorted[i + 1])\n",
     "    return best, best_pair\n",
     "\n",
     "xs = [5, 1, 9, 11]\n",
-    "print(closest_1d_divide_conquer(xs))  # (2, (9, 11))"
+    "print(closest_1d_divide_conquer(xs)) "
    ]
   },
   {
@@ -732,15 +731,11 @@
    "source": [
     "### ¿Se puede mejorar más?\n",
     "\n",
-    "Esto **no aparece en los apuntes**; es **conocimiento general**.  \n",
     "Si el algoritmo se basa únicamente en **comparaciones**, la necesidad de **ordenar** impone un **límite inferior** de aproximadamente  \n",
-    "\\[\n",
+    "$$\n",
     "\\Omega(n \\log n)\n",
-    "\\]\n",
-    "por lo que no se puede mejorar asintóticamente en el peor caso.\n",
-    "\n",
-    "Solo se podría bajar de ahí si se aprovecha **estructura adicional** del problema, por ejemplo:\n",
-    "- números enteros en un rango pequeño \\(\\rightarrow\\) ordenación por **buckets/counting** (sin comparaciones)."
+    "$$\n",
+    "por lo que no se puede mejorar asintóticamente en el peor caso."
    ]
   },
   {
@@ -753,15 +748,15 @@
     "\n",
     "- **Idea:** mismo patrón que en 1D: comparar **todas las parejas** de puntos.\n",
     "- **Distancia:** euclídea  \n",
-    "  \\[\n",
-    "  d(p,q)=\\sqrt{(x_p-x_q)^2+(y_p-y_q)^2}\n",
-    "  \\]\n",
+    " $$\n",
+    "d(p,q)=\\sqrt{(x_p-x_q)^2+(y_p-y_q)^2}\n",
+    "$$\n",
     "  (en implementación suele usarse la distancia **al cuadrado** para evitar la raíz)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +793,7 @@
     "    return math.sqrt(best_d2), best_pair\n",
     "\n",
     "pts2d = [(5, 0), (1, 0), (9, 0), (11, 0)]\n",
-    "print(closest_2d_bruteforce(pts2d))  # (2.0, ((9,0),(11,0))) o similar"
+    "print(closest_2d_bruteforce(pts2d))  "
    ]
   },
   {
@@ -816,17 +811,17 @@
     "\n",
     "### 3.1 Fuerza bruta\n",
     "\n",
-    "- **Complejidad:** \\(O(n^2)\\) en tiempo.\n",
+    "- **Complejidad:** $O(n^2)$ en tiempo.\n",
     "- **Idea:** comparar **todas las parejas** de puntos.\n",
     "- **Implementación:** usar la **distancia al cuadrado** para evitar `sqrt` (es más rápido y no cambia qué par minimiza la distancia):\n",
-    "  \\[\n",
-    "  d^2(p,q)=(x_p-x_q)^2+(y_p-y_q)^2+(z_p-z_q)^2\n",
-    "  \\]"
+    "$$\n",
+    "d^2(p,q)=(x_p-x_q)^2+(y_p-y_q)^2+(z_p-z_q)^2\n",
+    "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -873,23 +868,20 @@
     "    # best_pair no puede ser None porque n>=2\n",
     "    return math.sqrt(best_d2), best_pair  # distancia real\n",
     "\n",
-    "# -----------------------\n",
-    "# Tests rápidos\n",
-    "# -----------------------\n",
+    "#Ejemplo\n",
     "if __name__ == \"__main__\":\n",
     "    pts = [(0, 0, 0), (10, 0, 0), (1, 1, 1), (2, 2, 2)]\n",
     "    d, (p, q) = closest_3d_bruteforce(pts)\n",
-    "    print(\"dist =\", d, \"pair =\", (p, q))\n",
-    "    # El par más cercano debería ser (1,1,1)-(2,2,2) con dist sqrt(3)≈1.732..."
+    "    print(\"dist =\", d, \"pair =\", (p, q))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4) “Plus” que suele dar puntos: experimento de tiempos + mini-estadística\n",
+    "## 4) Experimento de tiempos + mini-estadística\n",
     "\n",
-    "Como el propio AG1 te pide **generar datos aleatorios**, añade un experimento comparando **fuerza bruta** vs **Divide y Vencerás (1D)**:\n",
+    "Añado un experimento comparando **fuerza bruta** vs **Divide y Vencerás (1D)**:\n",
     "\n",
     "- Tamaños: \\(n = 200, 500, 1000, 2000, \\dots\\)\n",
     "- **10 repeticiones** por cada \\(n\\)\n",
@@ -898,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -907,10 +899,10 @@
      "text": [
       "     n |           brute (ms) |          mejora (ms)\n",
       "--------------------------------------------------------\n",
-      "   200 |     1.77 ± 0.50     |     0.38 ± 0.17    \n",
-      "   500 |    12.25 ± 2.95     |     1.00 ± 0.31    \n",
-      "  1000 |    72.38 ± 5.10     |     2.78 ± 0.43    \n",
-      "  2000 |   296.67 ± 12.63    |     6.86 ± 1.38    \n"
+      "   200 |     2.54 ± 0.33     |     0.48 ± 0.09    \n",
+      "   500 |    19.48 ± 3.53     |     1.52 ± 0.38    \n",
+      "  1000 |    73.87 ± 6.07     |     3.14 ± 0.69    \n",
+      "  2000 |   303.73 ± 25.16    |     6.58 ± 1.28    \n"
      ]
     }
    ],
@@ -929,7 +921,6 @@
     "    if brute_fn is None:\n",
     "        brute_fn = globals().get(\"closest_1d_bruteforce\")\n",
     "    if fast_fn is None:\n",
-    "        # cambia el nombre aquí si tu mejora se llama distinto\n",
     "        fast_fn = globals().get(\"closest_1d_divide_conquer\") or globals().get(\"closest_1d_sorted\")\n",
     "\n",
     "    if brute_fn is None or fast_fn is None:\n",
@@ -975,7 +966,7 @@
     "              f\"{r['brute_mean_ms']:>8.2f} ± {r['brute_std_ms']:<8.2f} | \"\n",
     "              f\"{r['fast_mean_ms']:>8.2f} ± {r['fast_std_ms']:<8.2f}\")\n",
     "\n",
-    "# Ejecución\n",
+    "# Ejemplo\n",
     "res = benchmark_1d(ns=(200, 500, 1000, 2000), repeats=10)\n",
     "print_results_table(res)"
    ]
